saves/test/demo_full_20240802_193545/fsm1s/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp fsm1s_tb.v fsm1s.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
fsm1s_tb.v:97: $finish called at 230000 (1ps)

iverilog cmd 2 error:

